--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="最新Gemini 2.5 Pro中文版使用教程，提供Google Gemini最新模型的无限制使用方法，包含可靠Gemini中文版镜像网站推荐和注册指南，助您轻松使用Gemini AI。">
     <meta name="keywords" content="Gemini, Gemini 2.5 Pro, Google Gemini, Gemini中文版, Gemini中文版镜像, AI聊天, Google AI, Gemini教程, Claude, ChatGPT">
-    <meta name="last-modified" content="2025-06-26">
+    <meta name="last-modified" content="2025-07-20">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Gemini中文版教程">
     <title>Gemini 2.5 Pro中文版使用教程 - 最新Google AI无限制使用方法</title>
@@ -301,6 +301,7 @@
                             <span class="tag">Gemini全系列模型</span>
                             <span class="tag">GPT全系列模型</span>
                             <span class="tag">Claude全系列模型</span>
+                            <span class="tag">Grok全系列模型</span>
                             <span class="tag">客户端</span>
                             <span class="tag">离线使用</span>
                         </div>
